--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,7 @@
  @import "bootstrap";
  @import "posts.scss";
  @import "gritter";
- @import "bourbon/bourbon";
+ @import "bourbon";
 
  .custom-nav {
    margin-top: 15px;
