--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,12 +12,13 @@
  *
 
  */
-
+ @import "font-awesome";
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "posts.scss";
  @import "gritter";
  @import "bourbon";
+
 
  .custom-nav {
    margin-top: 15px;
