--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -18,9 +18,9 @@
       <%= status_label post.status %>
     </td>
     <td>
-      <%=link_to 'Edit', edit_post_path(post), id: "edit_#{post.id}" if policy(post).update? %>
+      <%= link_to '', edit_post_path(post), id: "edit_#{post.id}", class: 'fa-trash-alt' if policy(post).update? %>
     </td>
     <td>
-      <%= link_to 'Delete', post_path(post), method: :delete, id: "delete_post_#{post.id}_from_index", data: { confirm: 'Are you sure?' } %>
+      <i class="fas fa-trash-alt"></i><%= link_to '', post_path(post), method: :delete, id: "delete_post_#{post.id}_from_index", data: { confirm: 'Are you sure?' } %>
     </td>
   </tr>
