--- a/app/views/audit_logs/index.html.erb
+++ b/app/views/audit_logs/index.html.erb
@@ -24,9 +24,11 @@
       <th></th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="audit_logs">
     <%= render @audit_logs %>
     </tbody>
   </table>
 
-  <%= paginate @audit_logs, theme: 'twitter-bootstrap-4' %>
+  <div id="paginator">
+    <%= paginate @audit_logs, remote: true, theme: 'twitter-bootstrap-4' %>
+  </div>
