--- a/app/views/static/_admin.html.erb
+++ b/app/views/static/_admin.html.erb
@@ -1,1 +1,7 @@
-<h1>Hi Admin</h1>
+<div class="pending-overtime-approvals">
+  <h1>Get it!!</h1>
+</div>
+
+<div class="pending-submissions">
+
+</div>
