--- a/app/assets/stylesheets/admin_homepage.css
+++ b/app/assets/stylesheets/admin_homepage.css
@@ -1,12 +1,20 @@
-.pending-overtime-approvals {
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+.pending-homepage {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: #CAD5DE;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  padding: 20px;
 }
 
 
-.pending-submissions {
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+.homepage-block {
+  background-color: #1A80D9;
+  color: white;
+  margin: 15px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  padding: 15px;
 }
