--- a/app/views/static/_admin.html.erb
+++ b/app/views/static/_admin.html.erb
@@ -1,7 +1,26 @@
-<div class="pending-overtime-approvals">
-  <h1>Get it!!</h1>
-</div>
+<div class="container-fluid">
+  <div class="pending-homepage row">
+    <div class="homepage-block col-md-3">
+      <p>Boo to the Yah!!!</p>
+    </div>
 
-<div class="pending-submissions">
+    <div class="homepage-block col-md-3">
+      <p>Boo to the Yah!!!</p>
+    </div>
 
+    <div class="homepage-block col-md-3">
+      <p>Boo to the Yah!!!</p>
+    </div>
+
+    <div class="homepage-block col-md-3">
+      <p>Boo to the Yah!!!</p>
+    </div>
+
+  </div>
+
+  <div class="pending-homepage">
+    <div>
+      <p>asdf</p>
+    </div>
+  </div>
 </div>
