--- a/app/assets/stylesheets/admin_homepage.css
+++ b/app/assets/stylesheets/admin_homepage.css
@@ -12,9 +12,13 @@
 .homepage-block {
   background-color: #1A80D9;
   color: white;
-  margin: 15px;
+  margin: 12px 42px 12px 42px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
   padding: 15px;
+}
+
+.pending-details {
+  font-weight: 900;
 }
