--- a/app/views/static/_admin.html.erb
+++ b/app/views/static/_admin.html.erb
@@ -1,21 +1,18 @@
 <div class="container-fluid">
   <div class="pending-homepage row">
+    <% @pending_approvals.each do |pending_approval| %>
     <div class="homepage-block col-md-3">
-      <p>Boo to the Yah!!!</p>
+      <h4>
+        <%= pending_approval.user.full_name %>
+      </h4>
+      <p>
+        <span class="pending-details">Date Submitted:</span> <%= pending_approval.date %>
+      </p>
+      <p>
+        <span class="pending-details">Rationale:</span> <%= truncate pending_approval.rationale %>
+      </p>
     </div>
-
-    <div class="homepage-block col-md-3">
-      <p>Boo to the Yah!!!</p>
-    </div>
-
-    <div class="homepage-block col-md-3">
-      <p>Boo to the Yah!!!</p>
-    </div>
-
-    <div class="homepage-block col-md-3">
-      <p>Boo to the Yah!!!</p>
-    </div>
-
+    <% end %>
   </div>
 
   <div class="pending-homepage">
